# word2vec-pytorch

./: .gitignore  config.yaml  loss_visualize.ipynb  pyproject.toml  requirements.txt  train.py  train_blog.ipynb  train_blog.py  train_twitter_financial_news.ipynb
notebooks/: train.ipynb
utils/: config.py  dataloader.py  helper.py  model.py  model_config.py  project_config.py  trainer.py
