[tool.poetry]
name = "word2vec"
version = "0.1.0"
description = "Word to vector embedding."
authors = ["Fangjun Zhou <fangjun.zhou02@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
ipython = "^8.12.0"
torch = "^2.0.0"
torchtext = "^0.15.1"
portalocker = "^2.7.0"


[tool.poetry.group.dev.dependencies]
jupytext = "^1.14.5"
python-lsp-server = "^1.7.2"
jupyterlab = "^3.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
